# global-urban-building-completeness-analysis

./: .gitignore  README.md  data_description.md  data_preparation.md  docker-compose.yaml  requirements.txt
data/: inequality_stats_data.pkl  intra_urban_completeness_stats.csv
database/: Dockerfile  init-db.sql
notebooks/: Figure 1 - temporal evolution of urban building completeness.ipynb  Figure 3,4 -  inequality measures of completeness.ipynb  Figure 5,6 - agglomerative clustering.ipynb  Figure 5,6 and Table 10 - agglomerative clustering.ipynb  Figure 7 - scatterplot of residuals.ipynb  Figure 7 - temporal evolution per urban center.ipynb  Figure 8 - temporal evolution per urban center.ipynb  Figure 8 Table 4 - scatterplot of residuals.ipynb  Figure 9 - scatterplot of residuals.ipynb  Figure XX - temporal evolution per urban center.ipynb  Table 1 -  completeness by group.ipynb  Table 2 -  completeness by group.ipynb  Table 3 - reference datasets.ipynb  Table 3- summary stats for explanatory variables.ipynb  Table 4 - regional performance scores.ipynb  Table 5 - explanatory variables.ipynb  Table 5 - regional performance scores.ipynb  (+5 more)
scripts/V2024/: create_full_info_uc.py  export_for_ohsome_hex_v2024.sql  get_jrc_wc_stats.py  lara_building_per_grid.py  lara_road_length.py  microsoft_building_area.py  microsoft_road_length.py  model_performance.py  pyproject.toml  run_prediction.py  v_2024 Figure 3,4 - inequality measures of completeness.ipynb  version_2_Table 4 - regional performance scores.ipynb  version_2_figure8_table4.ipynb  version_2_figure_1.ipynb
(+27 files in other folders)
