[tool.poetry]
name = "jrc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ohsome = "^0.3.1"
geopandas = "^0.14.4"
geojson = "^3.1.0"
psycopg2 = "^2.9.9"
terracatalogueclient = "^0.1.18"
rasterio = "^1.3.10"
rasterstats = "^0.19.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"

[[tool.poetry.source]]
name = "terracatalogueclient"
url = "https://artifactory.vgt.vito.be/api/pypi/python-packages/simple"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
